# libcharguess

c/: AUTHORS  Makefile.in  configure  configure.in
c/src/: Makefile  Makefile.am  Makefile.in  big5.c  big5.h  bulgarian.c  chardist.c  chardist.h  cyrillic.c  esccs.c  esccs.h  escsm.c  eucjp.c  eucjp.h  euckr.c  euckr.h  euctw.c  euctw.h  gb2312.c  gb2312.h  greek.c  hungarian.c  jpcntx.c  jpcntx.h  latin1.c  latin1.h  mbcs.c  mbcs.h  mbcssm.c  sbcs.c  sbcs.h  sbcs_group.c  sbcs_group.h  sjis.c  sjis.h  statemachine.c  statemachine.h  thai.c  types.h  utf8.c  (+1 more)
c/src/tables/: Big5Freq.h  EUCKRFreq.h  EUCTWFreq.h  GB2312Freq.h  JISFreq.h
cpp/: ChangeLog  EUCJPProber.cpp  EUCJPProber.h  EUCKRProber.cpp  EUCKRProber.h  EUCTWProber.cpp  EUCTWProber.h  EscCharsetProber.cpp  EscCharsetProber.h  GB2312Prober.cpp  GB2312Prober.h  LICENSE  Latin1Prober.cpp  Latin1Prober.h  MBCSGroupProber.cpp  MBCSGroupProber.h  Makefile  SBCSGroupProber.cpp  SBCSGroupProber.h  SBCharsetProber.cpp  SBCharsetProber.h  SJISProber.cpp  SJISProber.h  UTF8Prober.cpp  UTF8Prober.h  big5Prober.cpp  big5Prober.h  charguess.cpp  charguess.h  charsetProber.h  codingStateMachine.h  config.status  pkgInt.h  types.h  universal.cpp  universal.h
