libcharguessdir = $(prefix)/include/libcharguess
lib_LTLIBRARIES = libcharguess.la
#include_HEADERS = charguess.h
libcharguess_HEADERS = jpcntx.h latin1.h sbcs.h sbcs_group.h types.h \
                       statemachine.h pkgint.h esccs.h chardist.h sjis.h \
					   eucjp.h euctw.h euckr.h gb2312.h big5.h utf8.h
libcharguess_la_SOURCES = jpcntx.c latin1.c sbcs.c sbcs_group.c statemachine.c \
                         escsm.c esccs.c chardist.c sjis.c eucjp.c euctw.c \
						 mbcssm.c  euckr.c gb2312.c big5.c utf8.c \
                         bulgarian.c cyrillic.c greek.c hungarian.c thai.c
